<resources>
    <string name="app_name">Empath</string>
    <string name="value_button_start">Start</string>
    <string name="start_text_0">… Hello? Is anyone on?</string>
    <string name="start_option_0">(Keep Waiting)</string>
    <string name="start_option_1">Yeah, I\'m here.</string>
    <string name="choice_1_text_0">You! You’re not supposed to be here yet. Just… stay there. The others will be here soon.</string>
    <string name="choice_1_text_1">…</string>
    <string name="choice_1_text_2">Red? Yellow? Where are you??</string>
    <string name="choice_1_text_3">Chill out, I’m on. I just finished my last character sheet.</string>
    <string name="choice_1_text_4">He’s already here!</string>
    <string name="choice_1_text_5">He? You mean she?</string>
    <string name="choice_1_text_6">Uh, no. I’ve been telling you it’s a he.</string>
    <string name="choice_1_text_7">That’s a straight-up lie! You’ve said she from the beginning!</string>
    <string name="choice_1_text_8">We’re not arguing about this. Please? He’s here and we need to start. Yellow, are you here?</string>
    <string name="choice_1_text_9">Yes.</string>
    <string name="choice_1_text_10">I was also under the assumption that it was a he.</string>
    <string name="choice_1_text_11">See?!</string>
    <string name="choice_1_text_12">But Blue has been calling it a she.</string>
    <string name="choice_text_13">:D</string>
    <string name="choice_1_text_14">Look, let’s just ask. Are you a boy or a girl?</string>
    <string name="choice_1_option_0">I\'m a girl</string>
    <string name="choice_1_option_1">I\'m a boy</string>
    <string name="choice_0_text_0">I love how you guys never take anything seriously. Makes it super fun whenever I plan things like this.</string>
    <string name="choice_0_text_1">Suuuuper fun.</string>
    <string name="choice_0_text_2">Maybe if I specifically tell you to be here at a certain time, then you should be here.</string>
    <string name="choice_0_text_3">I’m here, geez. I was finishing my last character sheet.</string>
    <string name="choice_0_text_4">Also, when have I ever not been serious? I’m Mr. Serious. No smile here. Nada.</string>
    <string name="choice_0_text_5">Whatever, yeah. I just want to go over the plan before he gets here.</string>
    <string name="choice_0_text_6">Wait, he? You definitely said it was going to be a she.</string>
    <string name="choice_0_text_7">Uh, no. He.</string>
    <string name="choice_0_text_8">You’ve been calling her a she this whole time! As in “She won’t know what hit her” and “She’ll be crying herself to sleep after this.” Sound familiar?</string>
    <string name="choice_0_text_9">Okay, it’s possible that those things were said by me. It doesn’t matter.</string>
    <string name="choice_0_text_10">I’ve been picturing a she this whole time :( You’re messing with my vibe.</string>
    <string name="choice_0_text_11">Red, c’mon dude. I need to make sure we’re on the same page with this thing. The plan, not the gender.</string>
    <string name="choice_0_text_12">What about Yellow? We need to wait for her to get on before we start, right?</string>
    <string name="choice_0_text_13">She knows what to do. And she’ll be here.</string>
    <string name="choice_0_text_14">So that whole rant earlier was just directed towards me?</string>
    <string name="choice_0_text_15">Hi, you two.</string>
    <string name="test">Hello</string>
    <string name="hiYellow">Hi, Yellow. For the record, isn’t our guest going to be a he?</string>
    <string name="myUnderstanding">That was my understanding.</string>
    <string name="SHEE">But you have been calling it a she. It’s unclear.</string>
    <string name="ha">HA! I think it’s a she. I’m almost certain.</string>
    <string name="personally">Personally, I imagined it as a he.</string>
    <string name="goodwith">Yeah, yeah, enough about the gender thing. Let’s talk shop. Yellow, are you still good with the Mystic Route?</string>
    <string name="frontof">Blue, should we really be talking about this in front of him?</string>
    <string name="waht">WHAT?</string>
    <string name="yeet">Yes, he’s been here for a minute or so. Sorry, are you a girl or a boy?</string>
    <string name="Girl">Girl.</string>
    <string name="Boy">Boy.</string>
    <string name="agree">Let\'s agree to disagree. The game begins... NOW.</string>
    <string name="personality">Have you ever taken a personality test?</string>
    <string name="lying">Good, you\'re already lying. That\'s an important part of these tests. Just... keep responding naturally.</string>
    <string name="Staycalm">Stay calm.</string>
    <string name="QuestionOne">You cut through the grassy field on your way to class. You\'re in a hurry, so when you spot a flash of white paper amidst the green, you\'ve already taken several steps. Come to think of it, you\'re not sure you saw anything at all.</string>
    <string name="Do">Do you go back and look?</string>
    <string name="Yes">Yes.</string>
    <string name="No">No.</string>
    <string name="Igoback">I go back and look.</string>
    <string name="walking">I continue walking to class.</string>
    <string name="Format">Then you\'re familiar with the format. We\'ll ask you a series of questions. Your answers, your lies, and your false impressions of yourself… they will determine your fate here.</string>
    <string name="different">It\'s a little different than some personality tests.</string>
    <string name="interesting">Interesting.</string>
    <string name="Toldyou">Told you so.</string>
    <string name="QuestionTwo">You’re on a camping trip with your family, and after a long day of setting up camp, you climb into the tent to sleep. Unfortunately, the unfamiliar buzz of the crickets outside keeps you from falling asleep. Just as you finally begin to doze off, your younger brother shakes you awake and says he needs to go to the bathroom. It’s only a few feet away, you tell him, but he insists. There are monsters outside, he says.</string>
    <string name="Doyougo">Do you go with him?</string>
    <string name="Itellhim">I tell him to go without me.</string>
    <string name="Igetup">I get up and go with him.</string>
    <string name="reminder">Right, right.</string>
    <string name="Easy">It\'s easy to just click a button, huh?</string>
    <string name="Question3">It’s the final game of your high school tennis season and your doubles partner is playing like garbage. You’re trying your best to be patient, but her constant mistakes are getting to you. With the game on the line, you step back to serve and… you double fault. It’s over. You’ve lost. Your partner turns and gives you the evil eye.</string>
    <string name="Whatdo">What do you say to her?</string>
    <string name="youknow">\"You know you lost us the game, right?\"</string>
    <string name="sorry">\"Sorry. I choked.\"</string>
    <string name="cats">You’re sitting on your porch and drinking lemonade. You watch Ninja, your cat, roll around in the dirt like an adorable fool. Suddenly, the neighbor’s kid sprints up, punts Ninja into the bushes, and runs away, cackling.</string>
    <string name="Doyou">Do you run after the kid and punch him?</string>
    <string name="Irun">I run the kid down and punch him.</string>
    <string name="idont">I don\'t run the kid down.</string>
    <string name="whattheheck">(What the heck, Blue. That scenario was super lame!)</string>
    <string name="actionpacked">(It was emotional and action-packed, was it not?)</string>
    <string name="cliffs">For weeks you’ve been waiting for a rainy day. This is the last day before summer vacation ends, and it’s sunny outside, once again. It’s the worst. All you want is an epic, stormy, solo day at the beach--the sort of day where you can stand heroically on a cliff as the wind and waves pound at the rocks below. Then again, maybe you shouldn’t be so picky with your weather.</string>
    <string name="doyouvisit">Do you go visit a seaside cliff despite the lack of rain?</string>
    <string name="igoanyways">I go anyways.</string>
    <string name="home">I stay home.</string>
</resources>
